BSP-196: TransferItem Handler. --- - TransferItem Handler + DI - OpenAPI doc updated. - KnexItemInstanceRepository / ItemInstanceRepository updated for TransferItem function. - Transfer Event created. - Tokenization service updated. - Nominal test case.
